# Onegin

./: CMakeLists.txt  makefile
include/: common.h
include/reader/: line_reader.h
include/sorter/: sorter.h
include/sorter/pointer_array/: ptr_array_buf.h
include/tests/: tests.h
src/: common.h  main.cpp  onegintext.txt  onegintext_mini.txt  output.txt
src/reader/: line_reader.cpp  line_reader.h
src/sorter/: sorter.cpp  sorter.h
src/sorter/pointer_array/: pointer_array.cpp  pointer_array.h  ptr_array_buf.cpp
src/sorter/pointer_array/buffer_version/: pointer_array_buf.cpp  pointer_array_buf.h
src/sorter/square_array/: square_array.cpp  square_array.h
src/tests/: tests.cpp  tests.h
text/: output.txt
